<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fiuba.ubreapp.RegisterAsDriverActivity">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText9" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText9"
        android:layout_alignStart="@+id/editText13"
        android:text="@string/colour"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="74dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText14"
        android:layout_alignStart="@+id/editText14"
        android:text="@string/plate"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="132dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText15"
        android:layout_alignStart="@+id/editText15"
        android:text="@string/year"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="193dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText16"
        android:layout_alignStart="@+id/editText16"
        android:text="@string/state"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="251dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText17"
        android:layout_alignStart="@+id/editText17"
        android:text="@string/radio"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="310dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airconditioner"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="374dp"
        android:layout_above="@+id/radioGroup2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText9"
        android:labelFor="@+id/editText9"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView16"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="33dp" />

    <EditText
        android:id="@+id/editText13"
        android:labelFor="@+id/editText13"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView17"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="91dp" />

    <EditText
        android:id="@+id/editText14"
        android:labelFor="@+id/editText14"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText15"
        android:layout_alignBottom="@+id/editText15"
        android:layout_alignStart="@+id/editText9"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="150dp" />

    <EditText
        android:id="@+id/editText15"
        android:labelFor="@+id/editText15"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView21"
        android:layout_alignStart="@+id/editText13"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/editText16"
        android:labelFor="@+id/editText16"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText17"
        android:layout_alignBottom="@+id/editText17"
        android:layout_alignStart="@+id/editText14"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="268dp" />

    <EditText
        android:id="@+id/editText17"
        android:labelFor="@+id/editText17"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView22"
        android:layout_alignStart="@+id/editText15"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="327dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignEnd="@+id/editText17"
        android:layout_marginEnd="27dp"
        android:text="@string/accept" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="445dp"
        android:layout_marginBottom="11dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText16"
        android:layout_marginStart="28dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="391dp"
        android:layout_marginBottom="42dp"
        android:id="@+id/radioGroup2"
        android:layout_above="@+id/button8"
        android:layout_alignEnd="@+id/textView22"
        android:layout_toEndOf="@+id/button8"
        android:layout_alignStart="@+id/textView22">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:text="@string/no" />

    </RadioGroup>

</RelativeLayout>
