<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fiuba.ubreapp.RegisterActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/name"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="10dp"
        android:text="@string/lastname" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/email"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:layout_below="@+id/editText5"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="55dp"
        android:text="@string/repeatpassword" />

    <EditText
        android:id="@+id/editText3"
        android:labelFor="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:text="@string/empty"/>

    <EditText
        android:id="@+id/editText4"
        android:labelFor="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText3"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty"/>

    <EditText
        android:id="@+id/editText5"
        android:labelFor="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/editText6"
        android:labelFor="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText5"
        android:layout_below="@+id/textView7"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText7"
        android:labelFor="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/registerpaymentdata"
        android:textColor="@color/com_facebook_blue"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/registerasdriver"
        android:textColor="@color/com_facebook_blue"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@+id/textView10"
        android:layout_alignEnd="@+id/editText7"
        android:layout_marginTop="29dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText7"
        android:layout_alignTop="@+id/button3"
        android:text="@string/cancel" />
</RelativeLayout>
