<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fiuba.ubreapp.ViewCar">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText9" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText9"
        android:layout_alignStart="@+id/editText13"
        android:text="@string/model"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="74dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText14"
        android:layout_alignStart="@+id/editText14"
        android:text="@string/colour"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="132dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText15"
        android:layout_alignStart="@+id/editText15"
        android:text="@string/plate"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="193dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText16"
        android:layout_alignStart="@+id/editText16"
        android:text="@string/year"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="251dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText17"
        android:layout_alignStart="@+id/editText17"
        android:text="@string/state"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="310dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio"
        android:layout_above="@+id/editText26"
        android:layout_alignStart="@+id/editText26" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText30"
        android:layout_alignStart="@+id/editText30"
        android:text="@string/airconditioner" />

    <EditText
        android:id="@+id/editText9"
        android:labelFor="@+id/editText9"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView16"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="33dp" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView17"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText13"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="91dp" />

    <EditText
        android:id="@+id/editText14"
        android:labelFor="@+id/editText14"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText15"
        android:layout_alignBottom="@+id/editText15"
        android:layout_alignStart="@+id/editText9"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="150dp" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView21"
        android:layout_alignStart="@+id/textView21"
        android:layout_marginBottom="61dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText15"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/editText16"
        android:labelFor="@+id/editText16"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText17"
        android:layout_alignBottom="@+id/editText17"
        android:layout_alignStart="@+id/editText14"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="268dp" />

    <EditText
        android:id="@+id/editText17"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignEnd="@+id/editText30"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText17"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="327dp" />

    <EditText
        android:id="@+id/editText26"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText30"
        android:layout_alignBottom="@+id/editText30"
        android:layout_alignStart="@+id/editText9"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText30"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText13"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:inputType="textPersonName"/>

</RelativeLayout>
